--- a/sources/style.css
+++ b/sources/style.css
@@ -241,7 +241,6 @@ main{
 }
 
 .content{
-  margin-left: 3%;
   max-width: 1100px;
   z-index: 999;
 }
@@ -266,7 +265,7 @@ main{
   display: flex;
   flex-direction: column;
   gap: 25px; 
-  margin-bottom: 25px; 
+  margin: 4%; 
   border: gray solid;
   border-radius: 20px;
   padding: 2rem; 
